--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./registro.html">Ingresar</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./libreria.html">Libreria</a>
+              </li>
             </ul>
           </div>
         </div>
