Se realiza libreria Banda Sonora

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg  navbar-dark fixed-top menu" id="menunav">
+      <nav class="navbar navbar-expand-lg  letra fixed-top menu" id="menunav">
         <img src="./assets/images/log5.png" alt="logo" class="img1 img-fluid col-12 col-md-6">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">Inicio</a>
@@ -121,10 +121,10 @@
                       <div class="col">
                         <div class="card h-100">
                           <div class="card-body">
-                            <iframe width="190" height="200" src="https://www.youtube.com/embed/X4XrCV8uWs0?start=60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="190" height="200"src="https://www.youtube.com/embed/bPi7ORsTp-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           </div>
                           <div class="card-footer">
-                            <small class="text-muted col-12 col-md-6 small">Trailer God of War III: (2010)</small>
+                            <small class="text-muted col-12 col-md-6 small">Trailer God of War III: Gods (2010)</small>
                           </div>
                         </div>
                       </div>
