--- a/registro.html
+++ b/registro.html
@@ -39,7 +39,7 @@
     <section class="login">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-8 text-white fw-bold mt-5">
+                <div class="col-12 col-md-8 text-white fw-bold mt-5" style="margin-left:50%;width: 55%;">
                     <h4>Ingresa y Registrate...</h4>
                     <hr>
                     <form class="formulario p-5">
